Closed Bug 1651172 Opened 5 years ago Closed 5 years ago

Rollout WebRender to gen7.5 gt2-3.

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox79 + fixed
firefox80 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file)

We accidentally shipped to these users last summer
without any problems so this should be relatively low risk.

We accidentally shipped to these users last summer
without any problems so this should be relatively low risk.

Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dfd384de1da1 Rollout WebRender to gen7.5 gt2-3. r=aosmond

Comment on attachment 9161967 [details]
Bug 1651172 - Rollout WebRender to gen7.5 gt2-3.

Beta/Release Uplift Approval Request

  • User impact if declined: Less WebRender
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This change is already on in EARLY_BETA and we've already shipped to this set of devices previously.
  • String changes made/needed:
Attachment #9161967 - Flags: approval-mozilla-beta?
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

Comment on attachment 9161967 [details]
Bug 1651172 - Rollout WebRender to gen7.5 gt2-3.

Approved for 79.0b6.

Attachment #9161967 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: