Bug 1651172 - Rollout WebRender to gen7.5 gt2-3. r=aosmond

We accidentally shipped to these users last summer
without any problems so this should be relatively low risk.

Differential Revision: https://phabricator.services.mozilla.com/D82586